--- a/modulo-a/example/package.json
+++ b/modulo-a/example/package.json
@@ -9,9 +9,16 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^5.x",
+    "@react-navigation/stack": "^5.x",
     "@sentry/react-native": "^3.0.1",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
