--- a/modulo-a/package.json
+++ b/modulo-a/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-modulo-a",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "modulo a",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -47,6 +47,9 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^5.x",
+    "@react-navigation/stack": "^5.x",
     "@release-it/conventional-changelog": "^2.0.0",
     "@sentry/react-native": "^3.0.1",
     "@types/jest": "^26.0.0",
@@ -63,13 +66,20 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-builder-bob": "^0.18.0",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.6.0",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
+    "@react-navigation/native": "*",
+    "@react-navigation/stack": "*",
     "@sentry/react-native": "*",
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-gesture-handler": "*"
   },
   "jest": {
     "preset": "react-native",
